# bn-mcp

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  mcp.json
.github/skills/bn-mcp/: SKILL.md
.github/skills/bn-mcp/references/: development.md
cmake/: bnmcpConfig.cmake.in
examples/list_functions/: plugin.cpp
include/bnmcp/: api.h
src/: bn_mcp.cpp  bn_mcp.h  mcp_server.cpp  mcp_server.h  plugin.cpp
test/: llil_tools_test.cpp  test_plugin.cpp  type_tools_test.cpp
